; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/preonic/keymaps/senseored/extr_keymap.c_dip_switch_update_user.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/preonic/keymaps/senseored/extr_keymap.c_dip_switch_update_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_ADJUST = common dso_local global i32 0, align 4
@muse_mode = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dip_switch_update_user(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %22 [
    i32 0, label %6
    i32 1, label %16
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %6
  %10 = load i32, i32* @_ADJUST, align 4
  %11 = call i32 @layer_on(i32 %10)
  br label %15

12:                                               ; preds = %6
  %13 = load i32, i32* @_ADJUST, align 4
  %14 = call i32 @layer_off(i32 %13)
  br label %15

15:                                               ; preds = %12, %9
  br label %22

16:                                               ; preds = %2
  %17 = load i32, i32* %4, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store i32 1, i32* @muse_mode, align 4
  br label %21

20:                                               ; preds = %16
  store i32 0, i32* @muse_mode, align 4
  br label %21

21:                                               ; preds = %20, %19
  br label %22

22:                                               ; preds = %21, %2, %15
  ret void
}

declare dso_local i32 @layer_on(i32) #1

declare dso_local i32 @layer_off(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
